<resources>
    <string name="app_name">Digit</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="signin_form_header">Sign in</string>
    <string name="search">Search</string>
    <string name="create_door_number">Create Door Number</string>
    <string name="search_utility">Search utility</string>
    <string name="floors">Select number of floors</string>
    <string name="add_details">Add Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="property_types">
        <item>Select Property</item>
        <item>Residential-Apartment</item>
        <item>Residential-Individual</item>
        <item>Commercial-Others</item>
        <item>Government Office</item>
        <item>Vacant Land</item>
    </string-array>

    <string-array name="residential_apartment">
        <item>Select Property</item>
        <item>Residential-Apartment</item>
        <item>Residential-Individual</item>
        <item>Commercial-Others</item>
        <item>Government Office</item>
        <item>Vacant Land</item>
    </string-array>




</resources>
