<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <Button
        android:id="@+id/btnCreateDoorNumber"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="4sp"
        android:text="@string/create_door_number"
        android:onClick="createDoorNumber"
        android:textColor="@color/white" />



    <Button
        android:id="@+id/btnSearch"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="4sp"
        android:text="@string/search"
        android:onClick="search"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/btnSearchUtilities"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:background="@color/colorPrimaryDark"
        android:elevation="4sp"
        android:text="@string/search_utility"
        android:onClick="searchUtility"
        android:textColor="@color/white" />

</LinearLayout>